force-app/main/default/objects/AHA_ERL_Junction__c/AHA_ERL_Junction__c.object-meta.xml
<CustomObject>
    <label>AHA-ERL-Profile Junction</label>
    <nameField>
        <displayFormat>RSORJ-{000000}</displayFormat>
        <label>AHA-ERL Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AHA-ERL-Profile Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>