force-app/main/default/objects/AHA_ERL_Junction__c/fields/ExternalIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIdentifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>