force-app/main/default/objects/AHA_ERL_Junction__c/fields/SORCategory__c.field-meta.xml
<CustomField>
    <fullName>SORCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOR Category</label>
    <referenceTo>AHA_ERL_Category__c</referenceTo>
    <relationshipLabel>Profiles</relationshipLabel>
    <relationshipName>AHA_ERL_Profile_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>