force-app/main/default/objects/AHA_ERL_Junction__c/fields/SORCode__c.field-meta.xml
<CustomField>
    <fullName>SORCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOR Code</label>
    <referenceTo>AHA_ERL_Code__c</referenceTo>
    <relationshipLabel>AHA-ERL-Profile Junctions</relationshipLabel>
    <relationshipName>AHA_ERL_Profile_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>