force-app/main/default/objects/AHA_ERL_Junction__c/fields/SORProfile__c.field-meta.xml
<CustomField>
    <fullName>SORProfile__c</fullName>
    <label>SOR Profile</label>
    <referenceTo>AHA_ERL_Code_Profile__c</referenceTo>
    <relationshipLabel>AHA-ERL-Profile Junctions</relationshipLabel>
    <relationshipName>AHA_ERL_Profile_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>